--- a/Report/main.tex
+++ b/Report/main.tex
@@ -72,7 +72,7 @@ The results obtained in the first task were found to be quite satisfactory in th
 
 \section{Introduction}
 Amazon reviews are known all over the world and are a key element to improve the visibility of their products on the platform.
-Over the years this review system has become more and more organized and is a strong influencer during purchases, in fact customers find in these reviews genuine opinions given by other users similar to them. Half of all online consumers seems to rely mainly on product reviews before buying them. On the other hand also sellers has some advantages because if products receive positive reviews will appear higher on the page and therefore is more likely to be sold. In this scenario, it is clear the importance of an automated system that checks if the assigned score corresponds to the reivew's written text, in order to prevent the use by vendors of automatic bots or other techniques to obtain positive reviews for their products. In this sense, amazon's decision to eliminate famous sellers for false positive reviews has made news in the last period.
+Over the years this review system has become more and more organized and is a strong influence during purchases, in fact customers find in these reviews genuine opinions given by other users similar to them. Half of all online consumers seems to rely mainly on product reviews before buying them. On the other hand also sellers has some advantages because if products receive positive reviews will appear higher on the page and therefore is more likely to be sold. In this scenario, it is clear the importance of an automated system that checks if the assigned score corresponds to the reivew's written text, in order to prevent the use by vendors of automatic bots or other techniques to obtain positive reviews for their products. In this sense, amazon's decision to eliminate famous sellers for false positive reviews has made news in the last period.
 For this reason, as main tasks, it was decided to implement a classification model and a clustering model. 
 The goal is to look for models that can actually be valid and that, given a new review, can verify if the score assigned by the user is consistent. Ideally, with efficient models, the process of assigning the score could be automated, leaving the user only the possibility to write the review, in doing so you would have reviews and evaluations that are as consistent and valid as possible for everyone.
 
@@ -90,7 +90,7 @@ The data used for the project are strongly based on the text and numerical evalu
     \item Text. Text of the review.
 \end{itemize}
 From the statistical analysis it emerged that our dataset contains $568454$ reviews made by over $200$k users about $74258$ products. All of these reviews were collected between August 1999 and October 2012.\\
-The first analyzes on the dataset highlighted some problems on the raw data downloaded that required some manipulation and cleaning phases before actually starting with the NLP tasks. First of all there are \textit{duplicated reviews} in the dataframe, duplicated reviews are those made by the same user id with the same rating, time and text but different product code. This can be due to many factors such as different sellers or amazon policies, however since the text and rating are the same it was decided to delete them anyway because they would not add useful data for the classification (same characteristics). This because it is difficult that a consumer purchase multiple identical products at the same time from different sellers, so it is reasonable to assume that it is precisely the same review that is automatically duplicated. Moreover has been noticed that some reviews have only the same user id and the same product id. Those reviews could be motivated by multiple purchase in different time or by an update of the first reviews maybe after the seller has answer to some faced problems. The first case could be usefull for NLP task because contains different features but sometimes those rows contains even the same text and only a different score, probably it is the update cases and this can be a problem for next tasks. For these reasons, and for not selecting by hand each reviews, all this rows has been deleted and only the most recent ones has been keeped. After those removals the dataset contains $392969$ reviews. Then has been noticed that some summaries contain \textit{null values}, as this column will not be considered further a simple fill replace has been applied. \\
+The first analyzes on the dataset highlighted some problems on the raw data downloaded that required some manipulation and cleaning phases before actually starting with the NLP tasks. First of all there are \textit{duplicated reviews} in the dataframe, duplicated reviews are those made by the same user id with the same rating, time and text but different product code. This can be due to many factors such as different sellers or amazon policies, however since the text and rating are the same it was decided to delete them anyway because they would not add useful data for the classification (same characteristics). This because it is difficult that a consumer purchase multiple identical products at the same time from different sellers, so it is reasonable to assume that it is precisely the same review that is automatically duplicated. Moreover has been noticed that some reviews have only the same user id and the same product id. Those reviews could be motivated by multiple purchase in different time or by an update of the first reviews maybe after the seller has answer to some faced problems. The first case could be useful for NLP task because contains different features but sometimes those rows contains even the same text and only a different score, probably it is the update cases and this can be a problem for next tasks. For these reasons, and for not selecting by hand each reviews, all this rows has been deleted and only the most recent ones has been kept. After those removals the dataset contains $392969$ reviews. Then has been noticed that some summaries contain \textit{null values}, as this column will not be considered further a simple fill replace has been applied. \\
 After has been observed that there was a \textit{strong imbalance in the ratings score} as you can see in Figure \ref{scoreImb} below. This imbalance can cause errors in the fitting of the models and therefore it will be necessary to manage it correctly for the portion of the dataset that will be used as training. Instead it is good to keep this unbalanced distribution in the test portion that will be used to evaluate the different models as it reports a real situation supposed to be real. 
 \begin{figure}[H]
 \begin{center}
@@ -99,7 +99,7 @@ After has been observed that there was a \textit{strong imbalance in the ratings
   \label{scoreImb}
 \end{center}
 \end{figure}
-\noindent Finally the \textit{temporal shifting} has been studied and no evidence of different text styles has been found so all rows has been keeped. During this analysis has emerged that reviews with \textit{score equal to 5 shows the greatest growth among all scores}, this seems unusual and one might wonder that people are generally optimistic or most likely there are unverified accounts that are increasing the seller inappropriately with fake reviews as happened in recent years. Again all rows has been keeped due to the fact that in the dataset is not reported any form of authenticity for each reviews. At this point the dataset is ready to be preprocessed and used for the NLP tasks.
+\noindent Finally the \textit{temporal shifting} has been studied and no evidence of different text styles has been found so all rows has been kept. During this analysis has emerged that reviews with \textit{score equal to 5 shows the greatest growth among all scores}, this seems unusual and one might wonder that people are generally optimistic or most likely there are unverified accounts that are increasing the seller inappropriately with fake reviews as happened in recent years. Again all rows has been kept due to the fact that in the dataset is not reported any form of authenticity for each reviews. At this point the dataset is ready to be preprocessed and used for the NLP tasks.
 
 \section{Preprocessing}
 To proceed with the analysis, the preprocessing part was necessary for uniform all texts. Never the less it's correct implementation is not easy and can be different for each dataset. Each preprocessing phases made in this project will be explained in details in the next subsections.
@@ -149,7 +149,7 @@ Before applying the text representation the length of each reviews has been anal
     \item Bag of words (BOW). Specifically it counts the number of occurrences of each words and not only their presence or absence.
     \item TF-IDF. 
 \end{itemize}
-Both this extracted representations contains a very large number of features ($12135$), this requires high resources and computational time to be able to classify and group the data. For this reason the Truncated SVD techniques as been applyied to reduce the number of features, the choosen of this technique instead of the standard SVD is driven by the fact that is most suitable for working with sparse matrix as the ones obtained from BOW and TF-IDF. In particular the Truncated SVD has been setted to try to minimize the number of features while maintaining more or less 75\% of the explained variance.
+Both this extracted representations contains a very large number of features ($12135$), this requires high resources and computational time to be able to classify and group the data. For this reason the Truncated SVD techniques as been applied to reduce the number of features, the chosen of this technique instead of the standard SVD is driven by the fact that is most suitable for working with sparse matrix as the ones obtained from BOW and TF-IDF. In particular the Truncated SVD has been set to try to minimize the number of features while maintaining more or less 75\% of the explained variance.
 The explained variance values and the number of features extracted for each representation are shown in the table below:
 \begin{table}[H]
     \begin{center}
@@ -263,7 +263,7 @@ With this classifier the TF-IDF representation achieve best results, as you can 
 \end{minipage}
 
 \subsubsection{Support vector machine (SVM)}
-The second types of classifier that has been deviloped is an SVM. The classic SVM classifier cannot be applied due to the complexity of the data, so an approximate version that allows very fast execution times has been used. However, as you can see from figure \ref{svm_fig} the results are much worse than before, and moreover it maintains the same problems of the previous classifier, that is a strong overfitting in the `negative' class as well the top-10 most informative features are again not so good. 
+The second types of classifier that has been developed is an SVM. The classic SVM classifier cannot be applied due to the complexity of the data, so an approximate version that allows very fast execution times has been used. However, as you can see from figure \ref{svm_fig} the results are much worse than before, and moreover it maintains the same problems of the previous classifier, that is a strong overfitting in the `negative' class as well the top-10 most informative features are again not so good. 
 \begin{figure}[H]
 	\begin{minipage}[b]{0.48\textwidth}
 		\centering
@@ -397,7 +397,7 @@ The presence of at least $5$ topics had already emerged from the previous cluste
   \label{top_mod_pyLDAvis}
 \end{center}
 \end{figure}
-\noindent By default topics are marked with a number and not with the argument, so it is necessary to inspect the words contained in each one to manually assign the reference argument. By looking for each topic in the visualization proposed above with $\lambda = 1$ you can see that all topics are interpretable and even if there are words repeated or slightly out of context, it is possible to understand well the probable argument covered by each topic. About this, topic $1$ talks about general flavor and sweets, topic $2$ is about the order and shipping process, topic $3$ is for animals, topic $4$ for tea and topic $5$ talks about coffee. This interpretation remains valid even if you decrease the $\lambda$ to include also more rare words. As said before this is not perfect but seems to be quite reasonable as results.
+\noindent By default topics are marked with a number and not with the argument, so it is necessary to inspect the words contained in each one to manually assign the reference argument. By looking for each topic in the visualization proposed above with $\lambda = 1$ you can see that all topics are intepretable and even if there are words repeated or slightly out of context, it is possible to understand well the probable argument covered by each topic. About this, topic $1$ talks about general flavor and sweets, topic $2$ is about the order and shipping process, topic $3$ is for animals, topic $4$ for tea and topic $5$ talks about coffee. This interpretation remains valid even if you decrease the $\lambda$ to include also more rare words. As said before this is not perfect but seems to be quite reasonable as results.
 
 \section{Conclusion}
 By a general point of view all those tasks highlighted that the TF-IDF representation works better than a simple BOW, moreover for some task, such as the multiclass classification, n-grams representation achieve better results.
